--- a/src/Curso.ComercioElectronico.HttpApi/Curso.ComercioElectronico.HttpApi.csproj
+++ b/src/Curso.ComercioElectronico.HttpApi/Curso.ComercioElectronico.HttpApi.csproj
@@ -7,7 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Curso.ComercioElectronico.Application\Curso.ComercioElectronico.Application.csproj" />
+    <ProjectReference Include="..\Curso.ComercioElectronico.Infraestructure\Curso.ComercioElectronico.Infraestructure.csproj" />
+    <ProjectReference Include="..\Curso.ComercioElectronico.Domain\Curso.ComercioElectronico.Domain.csproj" />
   </ItemGroup>
 
 </Project>
