Trabajar con UnitOfWork

--- a/src/Curso.ComercioElectronico.HttpApi/appsettings.json
+++ b/src/Curso.ComercioElectronico.HttpApi/appsettings.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "ComercioElectronico": "Data Source=curso.comercio-electronico.db"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
