--- a/src/Curso.ComercioElectronico.HttpApi/appsettings.json
+++ b/src/Curso.ComercioElectronico.HttpApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ComercioElectronico": "Data Source=curso.comercio-electronico.db"
+    "ComercioElectronico": "curso.comercio-electronico.db"
   },
 
   "Logging": {
