--- a/src/Curso.ComercioElectronico.Infraestructure/Curso.ComercioElectronico.Infraestructure.csproj
+++ b/src/Curso.ComercioElectronico.Infraestructure/Curso.ComercioElectronico.Infraestructure.csproj
@@ -10,6 +10,11 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="6.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
