--- a/src/Curso.ComercioElectronico.Application/Curso.ComercioElectronico.Application.csproj
+++ b/src/Curso.ComercioElectronico.Application/Curso.ComercioElectronico.Application.csproj
@@ -1,6 +1,13 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Curso.ComercioElectronico.Domain\Curso.ComercioElectronico.Domain.csproj" />
   </ItemGroup>
 
