Cambiar el tipo int a guid.

--- a/src/Curso.ComercioElectronico.HttpApi/appsettings.json
+++ b/src/Curso.ComercioElectronico.HttpApi/appsettings.json
@@ -1,12 +1,12 @@
 {
   "ConnectionStrings": {
-    "ComercioElectronico": "curso.comercio-electronico-v2.db"
+    "ComercioElectronico": "curso.comercio-electronico-v3.db"
   },
 
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Debug",
+      "Microsoft.AspNetCore": "Debug"
     }
   },
   "AllowedHosts": "*"
