Actualizar repositorio, con proyecto final

--- a/src/Curso.ComercioElectronico.HttpApi/appsettings.json
+++ b/src/Curso.ComercioElectronico.HttpApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "ComercioElectronico": "curso.comercio-electronico-v3.db"
+    "ComercioElectronico": "curso.comercio-electronico-final.db"
   },
 
   "Logging": {
