--- a/src/Curso.ComercioElectronico.Infraestructure/Curso.ComercioElectronico.Infraestructure.csproj
+++ b/src/Curso.ComercioElectronico.Infraestructure/Curso.ComercioElectronico.Infraestructure.csproj
@@ -17,6 +17,10 @@
     <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="6.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
